@@ -125,13 +125,23 @@ tinymce.PluginManager.add('autoresize', function(editor) {
 
 	// Add padding at the bottom for better UX
 	editor.on("init", function() {
-		var overflowPadding = editor.getParam('autoresize_overflow_padding', 1);
+		var overflowPadding, bottomMargin;
 
-		editor.dom.setStyles(editor.getBody(), {
-			paddingBottom: editor.getParam('autoresize_bottom_margin', 50),
-			paddingLeft: overflowPadding,
-			paddingRight: overflowPadding
-		});
+		overflowPadding = editor.getParam('autoresize_overflow_padding', 1);
+		bottomMargin = editor.getParam('autoresize_bottom_margin', 50);
+
+		if (overflowPadding !== false) {
+			editor.dom.setStyles(editor.getBody(), {
+				paddingLeft: overflowPadding,
+				paddingRight: overflowPadding
+			});
+		}
+
+		if (bottomMargin !== false) {
+			editor.dom.setStyles(editor.getBody(), {
+				paddingBottom: bottomMargin
+			});
+		}
 	});
 
 	// Add appropriate listeners for resizing content area
